--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,6 +7,12 @@
     padding: 0;
     margin: 0;
     list-style: none;
+
+    @media screen and (min-width: $tablet) {
+      margin: -15px;
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
 
   .team-photo {
@@ -17,6 +23,16 @@
     &:not(:last-child) {
       @media screen and (max-width: 767px) {
         margin-bottom: 30px;
+      }
+    }
+    @media screen and (min-width: $tablet) {
+      display: inline-flex;
+      flex-direction: column;
+      width: 354px;
+      margin: 15px;
+
+      &:nth-last-child(-n + 2) {
+        margin-bottom: 0;
       }
     }
   }
