--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -30,10 +30,10 @@
   margin-left: auto;
   margin-right: auto;
 
-  background-image: url("./../img/hero/hero-img1x.jpg");
+  background-image: url("./img/hero/hero-img1x.jpg");
 
   background-image: linear-gradient(to right, $gradient, $gradient),
-    url("./../img/hero/hero-img1x.jpg");
+    url("./img/hero/hero-img1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
